--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">SuurpeliFirebase</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <string name="tab_text_3">Tab 3</string>
+    <string name="tab_text_1">Timer</string>
+    <string name="tab_text_2">Kartta</string>
+    <string name="tab_text_3">Säännöt</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="login_title">Log in:</string>
@@ -12,4 +12,7 @@
     <string name="back_button_text">Back</string>
     <string name="register_button_text">Register</string>
     <string name="signin_button_text">Sign in</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
