--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,6 @@
     <string name="tab_text_2">Map</string>
     <string name="tab_text_3">Rules</string>
     <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
     <string name="login_title">Log in:</string>
     <string name="signup_text">Not a member? Sign up now!</string>
     <string name="forgot_password_text">I forgot my password</string>
@@ -31,7 +30,7 @@
         <item>Show notifications</item>
     </string-array>
 
-    <string name="settings_notifications_key">notificationKey</string>
+    <string name="settings_notifications_key" translatable="false">notificationKey</string>
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCh0taS3fKAw2gLYMsrFgK4ZRBjqAyd8r4</string>
 
     <!-- Säännöt/ohjeet stuff -->
