--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -15,6 +15,7 @@
     <string name="exit_text">Exit</string>
     <string name="loading_text">Loading&#8230;</string>
     <string name="settings_text">Asetukset</string>
+    <string name="round_text">Erä kello:</string>
     <string name="no_game_text">Erä ohi</string>
     <string name="gametime_notification_title">Peli aikaa jäljellä:</string>
 
