--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -138,7 +138,7 @@ Erän pituus on 100 minuuttia, jonka aikana hyökkäävät joukkueet pyrkivät v
     </string-array>
 
     <string-array name="ajoohje">
-        <item>Google maps linkki joku kaunis päivä</item>
+        <item>Kosketa avataksesi google maps ajo-ohjeet</item>
     </string-array>
 
     <string-array name="pmrkanavat">
