schedule on info fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,4 +176,7 @@ Erän pituus on 100 minuuttia, jonka aikana hyökkäävät joukkueet pyrkivät v
         <item>Musta joukkue pitää tukikohtia pelialueen ulkopuolella ja toimii niistä käsin muita joukkueita vastaan.</item>
         <item>Osuman saatuaan mustan joukkueen pelaajaa siirtyy keltaisen nauhan ulkopuolelle ja pysyy siellä vähintään 10min. Mustalla joukkueella ei ole lämäreitä, eli yksi osuma riittää eliminointiin. Pelialueelle mustan joukkueen pelaajat voivat palata mistä kohdasta tahansa, kuitenkin niin että suoraan nauhalta ei voi iskeä muiden joukkueiden kimppuun. Mustan joukkueen pelaaja ei voi paeta keltaisen nauhan yli.</item>
     </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
